@@ -129,7 +129,7 @@
 
         "Attributes": "Attributes",
 
-"Advantages": "Advantages",
+        "Advantages": "Advantages",
         "AdvantageSWILEA": "Roll with Advantage on Saves when performing athletic tasks, like climbing, jumping, leaping, swinging, flipping.",
         "AdvantageSTA": "You roll with Advantage when entertaining, performing or making Reaction rolls to avoid harm or consequence.",
         "AdvantageIMPLOC": "You can crack any lock by making a Flashlight roll.",
