@@ -1,5 +1,7 @@
 1.2.7
+- Add background image to connexion window
 - For opponent, don't calculate malus as a derived value. The malus' value is changed if the HitDice value is changed, but the malus'value could be manually changed
+- Add a call to worlds counter api
 
 1.2.6
 - Change github repository
